--- a/terms-and-conditions.html
+++ b/terms-and-conditions.html
@@ -39,7 +39,9 @@
     <!--------------------------------------- Navbar Section Started ----------------------------------->
 
     <section>
-      <nav class="navbar navbar-expand-lg bg-white fixed-top border-bottom shadow">
+      <nav
+        class="navbar navbar-expand-lg bg-white fixed-top border-bottom shadow"
+      >
         <div class="container">
           <a class="navbar-brand" href="/">
             <img
@@ -87,164 +89,192 @@
 
     <!---------------------------------------- Navbar Section Ended ------------------------------------>
 
-    <button id="scrollBtn" onclick="scrollToTop()"><i class='bx bx-chevron-up' ></i></button>
+    <button id="scrollBtn" onclick="scrollToTop()">
+      <i class="bx bx-chevron-up"></i>
+    </button>
 
-    <div class="container mt-5">
-      <div class="row">
-        <h4 class="fw-bold mt-5">
-          Terms and Conditions for Link Vault Social Repository (LVSR)
-        </h4>
+    <!----------------------------------------- Terms and Conditions ----------------------------------->
 
-        <h4 class="fw-bold my-3 pt-4">Introduction</h4>
-        <p>
-          Welcome to Link Vault Social Repository (LVSR)! These Terms and
-          Conditions (hereinafter referred to as "Terms") govern the use of our
-          mobile application and website. By accessing or using our services,
-          you agree to be bound by these Terms. Please take the time to read and
-          understand them carefully.
-        </p>
+    <section>
+      <div class="container mt-5">
+        <div class="row">
+          <h4 class="fw-bold mt-5">
+            Terms and Conditions for Link Vault Social Repository (LVSR)
+          </h4>
 
-        <h4 class="fw-bold my-3">Definitions</h4>
-        <p>
-          Throughout this document, certain terms have specific meanings. To
-          ensure clarity, the following definitions apply: - "LVSR," "we," "us,"
-          or "our" refers to Link Vault Social Repository, the mobile app, and
-          website's operator. - "User," "you," or "your" pertains to any
-          individual accessing or using our services.
-        </p>
-        <h4 class="fw-bold my-3">Acceptable Use</h4>
-        <p>
-          LVSR aims to provide a positive and enriching experience for all
-          users. By using our app and website, you agree to the following:
-          <br />
-          <br />
-          1. You shall not engage in any illegal, harmful, or abusive activities
-          while using LVSR. <br />
-          2. Spamming, harassing, or engaging in any form of offensive behavior
-          towards other users is strictly prohibited. <br />
-          3. You are responsible for the content you post on LVSR, ensuring it
-          complies with applicable laws and respects the rights of others.
-          <br />
-        </p>
+          <h4 class="fw-bold my-3 pt-4">Introduction</h4>
+          <p>
+            Welcome to Link Vault Social Repository (LVSR)! These Terms and
+            Conditions (hereinafter referred to as "Terms") govern the use of
+            our mobile application and website. By accessing or using our
+            services, you agree to be bound by these Terms. Please take the time
+            to read and understand them carefully.
+          </p>
 
-        <h4 class="fw-bold my-3">Account Creation and Security</h4>
+          <h4 class="fw-bold my-3">Definitions</h4>
+          <p>
+            Throughout this document, certain terms have specific meanings. To
+            ensure clarity, the following definitions apply: - "LVSR," "we,"
+            "us," or "our" refers to Link Vault Social Repository, the mobile
+            app, and website's operator. - "User," "you," or "your" pertains to
+            any individual accessing or using our services.
+          </p>
+          <h4 class="fw-bold my-3">Acceptable Use</h4>
+          <p>
+            LVSR aims to provide a positive and enriching experience for all
+            users. By using our app and website, you agree to the following:
+            <br />
+            <br />
+            1. You shall not engage in any illegal, harmful, or abusive
+            activities while using LVSR. <br />
+            2. Spamming, harassing, or engaging in any form of offensive
+            behavior towards other users is strictly prohibited. <br />
+            3. You are responsible for the content you post on LVSR, ensuring it
+            complies with applicable laws and respects the rights of others.
+            <br />
+          </p>
 
-        <p>
-          To access our services fully, you may be required to create a user
-          account. When doing so, please adhere to the following guidelines:
-          <br />
-          <br />
-          1. Provide accurate and up-to-date information during the registration
-          process. <br />
-          2. Keep your login credentials confidential and do not share your
-          account with others. <br />
-          3. You are solely responsible for any activities conducted through
-          your account. <br />
-        </p>
+          <h4 class="fw-bold my-3">Account Creation and Security</h4>
 
-        <h4 class="fw-bold my-3">Intellectual Property</h4>
-        <p>
-          We respect intellectual property rights and expect the same from our
-          users:
-          <br />
-          <br />
+          <p>
+            To access our services fully, you may be required to create a user
+            account. When doing so, please adhere to the following guidelines:
+            <br />
+            <br />
+            1. Provide accurate and up-to-date information during the
+            registration process. <br />
+            2. Keep your login credentials confidential and do not share your
+            account with others. <br />
+            3. You are solely responsible for any activities conducted through
+            your account. <br />
+          </p>
 
-          1. All intellectual property rights pertaining to LVSR, including its
-          content and features, are owned by LVSR or its licensors. <br />
-          2. Users retain ownership of the content they post on LVSR. However,
-          by posting content, you grant LVSR a non-exclusive, royalty-free
-          license to use, modify, and display that content for the purpose of
-          providing our services. <br />
-        </p>
-        <h4 class="fw-bold my-3">Paid Services (if applicable)</h4>
-        <p class="mb-5">
-          LVSR may offer premium features or paid versions. If you choose to
-          subscribe to these services:
-          <br />
-          <br />
-          1. You agree to the pricing and payment terms specified at the time of
-          purchase. <br />
-          2. Subscriptions may be subject to auto-renewal, but you can cancel at
-          any time according to our cancellation policy. <br />
-        </p>
+          <h4 class="fw-bold my-3">Intellectual Property</h4>
+          <p>
+            We respect intellectual property rights and expect the same from our
+            users:
+            <br />
+            <br />
+
+            1. All intellectual property rights pertaining to LVSR, including
+            its content and features, are owned by LVSR or its licensors. <br />
+            2. Users retain ownership of the content they post on LVSR. However,
+            by posting content, you grant LVSR a non-exclusive, royalty-free
+            license to use, modify, and display that content for the purpose of
+            providing our services. <br />
+          </p>
+          <h4 class="fw-bold my-3">Paid Services (if applicable)</h4>
+          <p class="mb-5">
+            LVSR may offer premium features or paid versions. If you choose to
+            subscribe to these services:
+            <br />
+            <br />
+            1. You agree to the pricing and payment terms specified at the time
+            of purchase. <br />
+            2. Subscriptions may be subject to auto-renewal, but you can cancel
+            at any time according to our cancellation policy. <br />
+          </p>
+        </div>
       </div>
-    </div>
+    </section>
 
-    
     <!-------------------------------------------- Footer Section Started--------------------------------->
 
     <footer class="hero-bg py-2">
-        <div class="container my-3">
-            <div class="row">
-                <div class="col-12 col-md-4 footer-logo">
-                    <a href="#">
-                        <img src="/assets/images/LVSR Logo.svg" class="img-fluid" alt="">
-                    </a>
-                    <p class="my-3">LVSR simplifies managing and sharing online presence. Customize your profile, share
-                        easily, and connect with others seamlessly. Experience privacy and security assurance.</p>
-                </div>
-                <div class="col-12 col-md-4 mt-md-5 mt-0">
-                    <h5 class="fw-bold mt-5">Useful Links</h5>
-                    <div class="useful-links">
-                        <ul class="p-0">
-                            <li class="mt-md-4 mt-0">
-                                <a href="/terms-and-conditions.html" class="text-decoration-none ">Terms and
-                                    Conditions</a>
-                            </li>
-                            <li class="my-1">
-                                <a href="/privacy-policy.html" class="text-decoration-none">Privacy Policy </a>
-                            </li>
-                            <li class="my-1">
-                                <a href="/refund-policy.html" class="text-decoration-none">Refund Policy </a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-12 col-md-4 mt-md-5 mt-0">
-                    <h5 class="fw-bold mt-md-5 mt-2">Follow Us on Social Media</h5>
-                    <div class="d-flex gap-3 ">
-                        <a href="#" class="text-decoration-none">
-                            <div class="bg-dark social d-flex justify-content-center align-items-center rounded-circle">
-                                <i class='bx bxl-facebook text-white'></i>
-                            </div>
-                        </a>
-                        <a href="#" class="text-decoration-none">
-                            <div class="bg-dark social d-flex justify-content-center align-items-center rounded-circle">
-                                <i class='bx bxl-twitter text-white'></i>
-                            </div>
-                        </a>
-                        <a href="#" class="text-decoration-none">
-                            <div class="bg-dark social d-flex justify-content-center align-items-center rounded-circle">
-                                <i class='bx bxl-instagram text-white'></i>
-                            </div>
-                        </a>
-                        <a href="#" class="text-decoration-none">
-                            <div class="bg-dark social d-flex justify-content-center align-items-center rounded-circle">
-                                <i class='bx bxl-youtube text-white'></i>
-                            </div>
-                        </a>
-                    </div>
-                </div>
+      <div class="container my-3">
+        <div class="row">
+          <div class="col-12 col-md-4 footer-logo">
+            <a href="#">
+              <img
+                src="/assets/images/LVSR Logo.svg"
+                class="img-fluid"
+                alt=""
+              />
+            </a>
+            <p class="my-3">
+              LVSR simplifies managing and sharing online presence. Customize
+              your profile, share easily, and connect with others seamlessly.
+              Experience privacy and security assurance.
+            </p>
+          </div>
+          <div class="col-12 col-md-4 mt-md-5 mt-0">
+            <h5 class="fw-bold mt-5">Useful Links</h5>
+            <div class="useful-links">
+              <ul class="p-0">
+                <li class="mt-md-4 mt-0">
+                  <a
+                    href="/terms-and-conditions.html"
+                    class="text-decoration-none"
+                    >Terms and Conditions</a
+                  >
+                </li>
+                <li class="my-1">
+                  <a href="/privacy-policy.html" class="text-decoration-none"
+                    >Privacy Policy
+                  </a>
+                </li>
+                <li class="my-1">
+                  <a href="/refund-policy.html" class="text-decoration-none"
+                    >Refund Policy
+                  </a>
+                </li>
+              </ul>
             </div>
+          </div>
+          <div class="col-12 col-md-4 mt-md-5 mt-0">
+            <h5 class="fw-bold mt-md-5 mt-2">Follow Us on Social Media</h5>
+            <div class="d-flex gap-3">
+              <a href="#" class="text-decoration-none">
+                <div
+                  class="bg-dark social d-flex justify-content-center align-items-center rounded-circle"
+                >
+                  <i class="bx bxl-facebook text-white"></i>
+                </div>
+              </a>
+              <a href="#" class="text-decoration-none">
+                <div
+                  class="bg-dark social d-flex justify-content-center align-items-center rounded-circle"
+                >
+                  <i class="bx bxl-twitter text-white"></i>
+                </div>
+              </a>
+              <a href="#" class="text-decoration-none">
+                <div
+                  class="bg-dark social d-flex justify-content-center align-items-center rounded-circle"
+                >
+                  <i class="bx bxl-instagram text-white"></i>
+                </div>
+              </a>
+              <a href="#" class="text-decoration-none">
+                <div
+                  class="bg-dark social d-flex justify-content-center align-items-center rounded-circle"
+                >
+                  <i class="bx bxl-youtube text-white"></i>
+                </div>
+              </a>
+            </div>
+          </div>
         </div>
+      </div>
     </footer>
 
     <section class="bg-dark">
-        <div class="container">
-            <div class="row">
-                <p class="text-center bg-dark text-white py-3 m-0">Copyright © 2023 <a href="#"
-                        class="text-decoration-none text-white">LVSR</a> All Rights Reserved.</p>
-            </div>
+      <div class="container">
+        <div class="row">
+          <p class="text-center bg-dark text-white py-3 m-0">
+            Copyright © 2023
+            <a href="#" class="text-decoration-none text-white">LVSR</a> All
+            Rights Reserved.
+          </p>
         </div>
+      </div>
     </section>
 
     <!--------------------------------------------- Footer Section Ended--------------------------------->
 
-        <!-------------------------------------------- Custom JavaScript Link-------------------------------->
+    <!-------------------------------------------- Custom JavaScript Link-------------------------------->
 
-        <script src="/assets/js/myScript.js"></script>
-
-
+    <script src="/assets/js/myScript.js"></script>
 
     <!-- Optional JavaScript; choose one of the two! -->
 
