--- a/index.html
+++ b/index.html
@@ -69,10 +69,8 @@
         <div class="container mt-5">
             <div class="row d-flex justify-content-center align-items-center ">
                 <div class="col-12 col-md-6 pt-md-0 pt-5">
-                    <h1 class="fw-bold  lh-base pt-md-0 pt-5">Organize all your Media Content easily with this App.</h1>
-                    <p class="my-3">Nulla maximus purus et sem consequat, porta porta tellus vulputa. Nunc porttitor
-                        libero vitae
-                        vehicula sodales. Vestibulum id condim ante.</p>
+                    <h1 class="fw-bold  lh-sm pt-md-0 pt-5">Organize all your Media Content easily with this App.</h1>
+                    <p class="my-3">Simplify social media management. Streamline content organization, scheduling, and engagement. Enhance your online presence with our user-friendly app..</p>
 
                 </div>
                 <div class="col-12 col-md-6">
@@ -720,7 +718,7 @@
 
     <!---------------------------------------------- Plan Section Ended--------------------------------->
 
-    <!-------------------------------------------- Footer Section Started--------------------------------->
+    <!-------------------------------------------- Footer Section Started------------------------------->
 
     <footer>
         <div class="container my-3">
@@ -781,7 +779,7 @@
     <section class="bg-dark">
         <div class="container">
             <div class="row">
-                <p class="text-center bg-dark text-white py-3 m-0">Copyright © 2023 <a href="#"
+                <p class="text-center bg-dark text-white py-3 m-0">Copyright © 2023 <a href="/"
                         class="text-decoration-none text-white">LVSR</a> All Rights Reserved.</p>
             </div>
         </div>
