--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -233,7 +233,7 @@
       <section class="bg-dark">
          <div class="container">
             <div class="row">
-               <p class="text-center bg-dark text-white py-3 m-0">Copyright © 2023 <a href="#"
+               <p class="text-center bg-dark text-white py-3 m-0">Copyright © 2023 <a href="/"
                   class="text-decoration-none text-white">LVSR</a> All Rights Reserved.</p>
             </div>
          </div>
