--- a/terms-and-conditions.html
+++ b/terms-and-conditions.html
@@ -263,7 +263,7 @@
         <div class="row">
           <p class="text-center bg-dark text-white py-3 m-0">
             Copyright © 2023
-            <a href="#" class="text-decoration-none text-white">LVSR</a> All
+            <a href="/" class="text-decoration-none text-white">LVSR</a> All
             Rights Reserved.
           </p>
         </div>
