--- a/index.html
+++ b/index.html
@@ -69,12 +69,12 @@
         <div class="container mt-5">
             <div class="row d-flex justify-content-center align-items-center ">
                 <div class="col-12 col-md-6 pt-md-0 pt-5">
-                    <h1 class="fw-bold  lh-sm pt-md-0 pt-5">Organize all your Media Content easily with this App.</h1>
+                    <h1 class="fw-bold  lh-sm pt-md-0 pt-5">Organize all your Social Media Content easily with this App.</h1>
                     <p class="my-3">Simplify social media management. Streamline content organization, scheduling, and engagement. Enhance your online presence with our user-friendly app..</p>
 
                 </div>
                 <div class="col-12 col-md-6">
-                    <img src="/assets/images/hero.png" class="img-fluid" alt="">
+                    <img src="/assets/images/hero-remove-bg.png" class="img-fluid" alt="">
                 </div>
             </div>
         </div>
@@ -134,13 +134,13 @@
                 </div>
                 <div class="col-12 col-md-6 pt-md-0 pt-3">
                     <img src="/assets/images/how-it-works.jpg"
-                        class="img-fluid how-it-works-image-2  " alt="">
+                        class="img-fluid how-it-works-image-2 border " alt="">
                 </div>
             </div>
             <div class="row my-md-5 my-3">
                 
                 <div class="col-12 col-md-6 order-1 order-md-0 pt-md-0 pt-3">
-                    <img src="/assets/images/ww.jpg" class="img-fluid how-it-works-image-2 " alt="">
+                    <img src="/assets/images/ww.jpg" class="img-fluid how-it-works-image-2 border" alt="">
 
                 </div>
                 <div class="col-12 col-md-6 order-0 order-md-1">
