--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -190,14 +190,14 @@
                   <div class="useful-links">
                      <ul class="p-0">
                         <li class="mt-md-3 mt-0">
-                           <a href="/terms-and-conditions.html" class="text-decoration-none ">Terms and
+                           <a href="/terms-and-conditions.html" >Terms and
                            Conditions</a>
                         </li>
                         <li class="my-1">
-                           <a href="/privacy-policy.html" class="text-decoration-none">Privacy Policy </a>
+                           <a href="/privacy-policy.html" >Privacy Policy </a>
                         </li>
                         <li class="my-1">
-                           <a href="/refund-policy.html" class="text-decoration-none">Refund Policy </a>
+                           <a href="/refund-policy.html" >Refund Policy </a>
                         </li>
                      </ul>
                   </div>
