--- a/refund-policy.html
+++ b/refund-policy.html
@@ -63,7 +63,12 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="/index.html">Home</a>
+                <a
+                  class="nav-link active"
+                  aria-current="page"
+                  href="/index.html"
+                  >Home</a
+                >
               </li>
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="/#about"
@@ -196,25 +201,17 @@
             </p>
           </div>
           <div class="col-12 col-md-4 mt-md-5 mt-0">
-               <h5 class="fw-bold mt-4">Useful Links</h5>
+            <h5 class="fw-bold mt-4">Useful Links</h5>
             <div class="useful-links">
               <ul class="p-0">
                 <li class="mt-md-3 mt-0">
-                  <a
-                    href="/terms-and-conditions.html"
-                    class="text-decoration-none"
-                    >Terms and Conditions</a
-                  >
+                  <a href="/terms-and-conditions.html">Terms and Conditions</a>
                 </li>
                 <li class="my-1">
-                  <a href="/privacy-policy.html" class="text-decoration-none"
-                    >Privacy Policy
-                  </a>
+                  <a href="/privacy-policy.html">Privacy Policy </a>
                 </li>
                 <li class="my-1">
-                  <a href="/refund-policy.html" class="text-decoration-none"
-                    >Refund Policy
-                  </a>
+                  <a href="/refund-policy.html">Refund Policy </a>
                 </li>
               </ul>
             </div>
