--- a/index.html
+++ b/index.html
@@ -780,26 +780,37 @@
                     </div>
                 </div>
                 <div class="col-12 col-md-4 mt-md-5 mt-0">
-                    <h5 class="fw-bold mt-md-4 mt-2">Follow Us on Social Media</h5>
+                    <h5 class="fw-bold mt-md-4 mt-2">Contact Us</h5>
                     <div class="d-flex gap-3 mb-md-0 mb-4 mt-3">
-                        <a href="#" class="text-decoration-none">
+                        <a href="mailto:info@lvsr.io" target="_blank" class="text-decoration-none">
                             <div class="bg-dark social d-flex justify-content-center align-items-center rounded-circle">
-                                <i class='bx bxl-facebook text-white'></i>
+                                <i class='bx bx-envelope text-white'></i>
                             </div>
                         </a>
-                        <a href="#" class="text-decoration-none">
-                            <div class="bg-dark social d-flex justify-content-center align-items-center rounded-circle">
-                                <i class='bx bxl-twitter text-white'></i>
-                            </div>
-                        </a>
-                        <a href="#" class="text-decoration-none">
+                        <a href="https://www.instagram.com/lvsr.io/" target="_blank" class="text-decoration-none">
                             <div class="bg-dark social d-flex justify-content-center align-items-center rounded-circle">
                                 <i class='bx bxl-instagram text-white'></i>
                             </div>
                         </a>
-                        <a href="#" class="text-decoration-none">
+                        <a href=" twitter.com/lsvr_io" target="_blank" class="text-decoration-none">
+                            <div class="bg-dark social d-flex justify-content-center align-items-center rounded-circle">
+                                <i class='bx bxl-twitter text-white'></i>
+                            </div>
+                        </a>
+                       
+                        <a href="https://www.youtube.com/@LinkVaultSocialRepository" target="_blank" class="text-decoration-none">
                             <div class="bg-dark social d-flex justify-content-center align-items-center rounded-circle">
                                 <i class='bx bxl-youtube text-white'></i>
+                            </div>
+                        </a>
+                        <a href="Tiktok.com/LinkVault" target="_blank" class="text-decoration-none">
+                            <div class="bg-dark social d-flex justify-content-center align-items-center rounded-circle">
+                                <i class='bx bxl-tiktok text-white'></i>
+                            </div>
+                        </a>
+                        <a href="https://discord.gg/whfU4kysP" target="_blank" class="text-decoration-none">
+                            <div class="bg-dark social d-flex justify-content-center align-items-center rounded-circle">
+                                <i class='bx bxl-discord-alt text-white'></i>
                             </div>
                         </a>
                     </div>
