--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <div class="container mt-5">
             <div class="row d-flex justify-content-center align-items-center ">
                 <div class="col-12 col-md-6 pt-md-0 pt-5">
-                    <h1 class="fw-bold  lh-sm pt-md-0 pt-5">Organize all your Social Media Content easily with this App.</h1>
+                    <h1 class="fw-bold  lh-sm pt-md-0 pt-5">Manage all your Social Media Content easily with this App.</h1>
                     <p class="my-3">Simplify social media management. Streamline content organization, scheduling, and engagement. Enhance your online presence with our user-friendly app..</p>
 
                 </div>
@@ -719,6 +719,10 @@
 
     <!------------------------------------------- Plan Section Ended------------------------------------>
     
+
+
+
+
     <!-------------------------------------- Get In Touch Section Started ------------------------------>
     
     <section class="get-in-touch py-5">
