--- a/index.html
+++ b/index.html
@@ -780,6 +780,9 @@
                             <li class="my-1">
                                 <a href="/refund-policy.html" >Refund Policy </a>
                             </li>
+                            <li class="my-1">
+                                <a href="/eula.html" >EULA </a>
+                            </li>
                         </ul>
                     </div>
                 </div>
