--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -186,22 +186,25 @@
                   </p>
                </div>
                <div class="col-12 col-md-4 mt-md-5 mt-0">
-                     <h5 class="fw-bold mt-4">Useful Links</h5>
-                  <div class="useful-links">
-                     <ul class="p-0">
-                        <li class="mt-md-3 mt-0">
-                           <a href="/terms-and-conditions.html" >Terms and
-                           Conditions</a>
-                        </li>
-                        <li class="my-1">
-                           <a href="/privacy-policy.html" >Privacy Policy </a>
-                        </li>
-                        <li class="my-1">
-                           <a href="/refund-policy.html" >Refund Policy </a>
-                        </li>
-                     </ul>
-                  </div>
-               </div>
+                    <h5 class="fw-bold mt-4">Useful Links</h5>
+                    <div class="useful-links">
+                        <ul class="p-0">
+                            <li class="mt-md-3 mt-0">
+                                <a href="/terms-and-conditions.html" >Terms and
+                                    Conditions</a>
+                            </li>
+                            <li class="my-1">
+                                <a href="/privacy-policy.html" >Privacy Policy </a>
+                            </li>
+                            <li class="my-1">
+                                <a href="/refund-policy.html" >Refund Policy </a>
+                            </li>
+                            <li class="my-1">
+                                <a href="/eula.html" >EULA </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
                <div class="col-12 col-md-4 mt-md-5 mt-0">
                   <h5 class="fw-bold mt-md-4 mt-2">Follow Us on Social Media</h5>
                  <div class="d-flex gap-3 mb-md-0 mb-4 mt-3">
